[tool.poetry]
name = "ab-itmo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.2"
jupyter = "^1.0.0"
numpy = "^1.26.1"
ipywidgets = "^8.1.1"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
statsmodels = "^0.14.0"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
